--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "click>=8.1.7",
     "jinja2>=3.1.3",
     "toml>=0.10.2",
+    "python-frontmatter>=1.1.0",
+    "markdown>=3.8",
+    "nanoid>=2.0.0",
 ]
 
 [project.scripts]
